fixes: button collapse now has solved the height bug, also the modal windows was deleted

--- a/public/main.css
+++ b/public/main.css
@@ -144,7 +144,6 @@ input {
 
 
 /* SECTION KNOWLEDGES */
-.container-knowledges,
 .container-projects {
   margin-top: 12rem;
   padding-top: 3rem;
@@ -156,11 +155,13 @@ input {
 .knowledges-h1,
 .projects-h1 {
   width: 90%;
-  margin: 2.5rem 0;
+  padding-top: 2rem;
+  margin: 4rem 0 8px 0;
   font-size: 3rem;
   letter-spacing: -1.2px;
   line-height: 1.1;
   text-align: center;
+  grid-column: -1/1;
 }
 
 .projects-h1 {
@@ -168,151 +169,10 @@ input {
 }
 
 
-.wrapper-knowledges {
-  width: 90%;
-  display: grid;
-  gap: 1.3rem .8rem;
-  grid-template-columns: repeat(auto-fit, minmax(8.5rem, 1fr));
-  align-items: center;
-  justify-items: center;
-}
-
-.knowledges-btn {
-  height: 5.5rem;
-  border: none;
-  width: 8.5rem;
-  border-radius: 10px;
-  animation: 5s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  background-color: var(--bgCardKnowledges);
-  box-shadow: 2px 8px 10px rgba(0, 0, 0, 0.2);
-}
-
-.knowledges-btn:active {
-  transform: translate(0px, -6%);
-}
-
-.knowledges-btn h1 {
-  font-size: 1.3rem;
-  font-weight: 700;
-  letter-spacing: -.5px;
-  font-family: 'Inter';
-  text-align: center;
-  color: #121212;
-}
-
-.kn1 {
-  background: linear-gradient(to right bottom, #afffee, #00fb75);
-}
-
-.kn2 {
-  background: linear-gradient(to top left, #ffcb30, #ffd43b);
-}
-
-.kn3 {
-  background: linear-gradient(to right bottom, #80c4fc 10%, #369cf5);
-}
-
-.kn4 {
-  background: linear-gradient(to right bottom, #FFCDA5 10%, #EE4D5F);
-}
-
-.kn5 {
-  background: linear-gradient(to right bottom, #efb7d1 10%, #91beea);
-}
-
-.kn6 {
-  background: linear-gradient(to top left, #38d9a9, #63e6be);
-}
-
-.kn7 {
-  background: linear-gradient(to top left, #f03e3e, #ff8c8c);
-}
-
-.kn8 {
-  background: linear-gradient(to right bottom, #a7bfe8 10%, #6190e8);
-}
-
-
-/* Modal */
-.modal-skills {
-  height: 25rem;
-  width: 19rem;
-  border-radius: 18px;
-  position: absolute;
-  top: 80rem;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-  border: none;
-  background-color: var(--white);
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.5);
-}
-
-.container-modal-header {
-  height: 20%;
-  border-radius: 16px 16px 0 0;
-  display: flex;
-  align-items: center;
-  text-align: center;
-}
-
-.container-modal-header h1 {
-  width: 80%;
-  font-size: 1.6rem;
-  letter-spacing: -1px;
-  color: #121212;
-}
-
-.btn-closeModal {
-  width: 20%;
-  font-size: 1.8rem;
-  border: none;
-  background: none;
-  color: #121212;
-}
-
-.ul-modal {
-  margin: .5rem 0 0 3.8rem;
-}
-
-.ul-modal li {
-  padding: .7rem 1.7rem 1rem 0;
-  font-size: 1.25rem;
-  list-style: disc;
-}
-
-.below-modal {
-  height: 100%;
-  width: 900%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
-  background-color: rgba(0, 0, 0, 0.3);
-}
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* Knowledges and Skills */
 .container-knowledgesCards {
   padding: 0 1rem;
   display: grid;
@@ -357,7 +217,7 @@ input {
 .cardKnowledge-ul:has(+ .btn-expandCard:not(:checked))::before {
   content: "";
   position: absolute;
-  height: calc(1.8em * var(--line-height));
+  height: calc(2em * var(--line-height));
   width: 100%;
   bottom: 0;
   pointer-events: none;
@@ -367,13 +227,15 @@ input {
 .btn-expandCard {
   appearance: none;
   min-width: 100%;
+  height: 2.3rem;
   margin-top: 1rem;
-  padding: 10px 0;
   border-radius: 8px;
   font-size: 16px;
   font-weight: 400;
   cursor: pointer;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: black;
   background-color: #e7e7e7;
 }
